--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "request-ip": "^1.2.3",
-    "ua-parser-js": "^0.7.12",
-    "useragent": "^2.1.12"
+    "ua-parser-js": "^0.7.12"
   }
 }
